--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "aos": "^2.3.4",
     "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^6.0.8",
     "typescript": "5.2.2"
   }
 }
