--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coreui/react": "^5.0.0-alpha.3",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "aos": "^2.3.4",
+    "keen-slider": "^6.8.6",
     "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "styled-components": "^6.0.8",
+    "swiper": "^10.3.0",
     "typescript": "5.2.2"
   }
 }
