--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "keen-slider": "^6.8.6",
     "next": "13.5.2",
