--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-otp-input": "^3.1.0",
     "react-responsive-carousel": "^3.2.23",
     "styled-components": "^6.0.8",
     "swiper": "^10.3.0",
