--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@coreui/react": "^5.0.0-alpha.3",
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -19,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-otp-input": "^3.1.0",
+    "react-redux": "^8.1.3",
     "react-responsive-carousel": "^3.2.23",
     "styled-components": "^6.0.8",
     "swiper": "^10.3.0",
