--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@coreui/react": "^5.0.0-alpha.3",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.15",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
