--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-otp-input": "^3.1.0",
     "react-redux": "^8.1.3",
     "react-responsive-carousel": "^3.2.23",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.0.8",
     "swiper": "^10.3.0",
     "typescript": "5.2.2"
