--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "animate.css": "^4.1.1",
     "keen-slider": "^6.8.6",
     "next": "13.5.2",
+    "next-pwa": "^5.6.0",
     "nuka-carousel": "^6.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
